--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,8 @@
 *,
 *:before, 
 *:afte {
-    box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+            box-sizing: border-box;
     margin: 0;
     padding: 0;
 }
@@ -29,8 +30,9 @@ body {
     content: ' ';
     display: block;
     height: 2px;
-    margin-top: 10px;
-    background: -webkit-linear-gradient(left, rgba(186, 232, 248,0) 0%,rgba(186, 232, 248,0.8) 20%,rgba(186, 232, 248,1) 53%,rgba(186, 232, 248,0.8) 79%,rgba(186, 232, 248,0) 100%); 
+    margin-top: 10px; 
+    background: -webkit-gradient(linear, left top, right top, from(rgba(186, 232, 248,0)),color-stop(20%, rgba(186, 232, 248, 0.8)),color-stop(53%, rgba(186, 232, 248,1)),color-stop(79%, rgba(186, 232, 248,0.8)),to(rgba(186, 232, 248,0))); 
+    background: -o-linear-gradient(left, rgba(186, 232, 248,0) 0%,rgba(186, 232, 248, 0.8) 20%,rgba(186, 232, 248,1) 53%,rgba(186, 232, 248,0.8) 79%,rgba(186, 232, 248,0) 100%); 
     background: linear-gradient(left, rgba(186, 232, 248,0) 0%,rgba(186, 232, 248, 0.8) 20%,rgba(186, 232, 248,1) 53%,rgba(186, 232, 248,0.8) 79%,rgba(186, 232, 248,0) 100%); 
     margin-bottom: 15px;
   }
@@ -60,11 +62,21 @@ a {
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-direction: column;
-    justify-content: center;
-    animation: fadeInUp .6s .5s ease both;
-    align-items: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-animation: fadeInUp .6s .5s ease both;
+            animation: fadeInUp .6s .5s ease both;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     text-align: center;
     text-transform: uppercase;
 }
@@ -129,13 +141,20 @@ nav.transparent-menu {
     color: #020e1b;
     font-family: Roboto, sans-serif;
     font-weight: bold;
+    -webkit-transition: 0.3s ease-in-out;
+    -o-transition: 0.3s ease-in-out;
     transition: 0.3s ease-in-out;
 }
 
 .up-transition:hover {
-    transform: scale(1.1);
+    -webkit-transform: scale(1.1);
+        -ms-transform: scale(1.1);
+            transform: scale(1.1);
+    -webkit-transition: 0.5 all cubic-bezier(0.175, 0.885, 0.32, 1.275);
+    -o-transition: 0.5 all cubic-bezier(0.175, 0.885, 0.32, 1.275);
     transition: 0.5 all cubic-bezier(0.175, 0.885, 0.32, 1.275);
-    box-shadow: 0 5px 10px #c2efff;
+    -webkit-box-shadow: 0 5px 10px #c2efff;
+            box-shadow: 0 5px 10px #c2efff;
     z-index: 5;
 }
 
@@ -163,6 +182,8 @@ nav.transparent-menu {
 }
 
 #skills li {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
 }
 
@@ -203,8 +224,13 @@ footer {
 }
 
 #footer {
-    align-items: right;
-    flex-direction: row;
+    -webkit-box-align: right;
+        -ms-flex-align: right;
+            align-items: right;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
 }
 
 #footer h2 {
@@ -220,6 +246,8 @@ footer {
 }
 
 #footer li {
+    display: -webkit-inline-box;
+    display: -ms-inline-flexbox;
     display: inline-flex;
     padding: 10px;
 }
